--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "react-native-colored-remote-svg",
   "description": "Load and style svg images in react-native",
-  "repository": "Vatia13/react-native-colored-remote-svg",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Vatia13/react-native-colored-remote-svg.git"
+  },
   "version": "2.0.6",
   "main": "index.js",
   "authors": [
@@ -18,5 +21,13 @@
     "react-native",
     "svg",
     "image"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/Vatia13/react-native-colored-remote-svg/issues"
+  },
+  "homepage": "https://github.com/Vatia13/react-native-colored-remote-svg#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Vati Child"
 }
